pkl: support indexing arrays and strings by offset
This patch adds support for indexing Poke arrays and strings with
offsets.

When an expression that evaluates to an offset is used as the
index in an array or string, it refers to the element in the
array (or character in the string) occupying _exactly_ the given
offset inside the array.  If no such element exists then
E_out_of_bounds is raised.  Examples:

  (poke) [1,2,3][4#B]
  2
  (poke) [1,2,3][5#B]
  unhandled out of bounds exception

The canonical use case for this feature is to implement string
tables:

  type COFF_Strtab =
    struct
    {
      offset<uint<32>,B> size;
      string[size] entries;

      method get_string = (offset<uint<32>,B> offset) string:
      {
        return entries[offset];
      }
    };

Note that the above works for both mapped and non-mapped COFF
string tables.  This is unlike the previous implementation:

  type COFF_Strtab =
    struct
    {
      offset<uint<32>,B> size;
      string[size] entries;

      method get_string = (offset<uint<32>,B> offset) string:
      {
        /* XXX use indexing by size whenever available, it is
           better because it is agnostic to mapping.  */
        return string @ entries'offset + offset;
      }
    };

Which only worked for mapped values.

2022-10-31  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_indexer): Allow offsets as
	indexes in indexers.
	* libpoke/pkl-promo.c (pkl_promo_ps_indexer): Promote offset
	indexes.
	* libpoke/pkl-gen.c (pkl_gen_pr_indexer): Handle offset indexes.
	* libpoke/pkl-gen.pks (aoref): New macro.
	(stroref): Likewise.
	* libpoke/pkl-rt.pk (_pkl_aoref): New function.
	(_pkl_aoref_complete): Likewise.
	* testsuite/poke.pkl/arrays-index-4.pk: New test.
	* testsuite/poke.pkl/arrays-index-5.pk: Likewise.
	* testsuite/poke.pkl/arrays-index-6.pk: Likewise.
	* testsuite/poke.pkl/arrays-index-7.pk: Likewise.
	* testsuite/poke.pkl/arrays-index-8.pk: Likewise.
	* testsuite/poke.pkl/ar

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,32 @@
+2022-10-31  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pkl-typify.c (pkl_typify1_ps_indexer): Allow offsets as
+	indexes in indexers.
+	* libpoke/pkl-promo.c (pkl_promo_ps_indexer): Promote offset
+	indexes.
+	* libpoke/pkl-gen.c (pkl_gen_pr_indexer): Handle offset indexes.
+	* libpoke/pkl-gen.pks (aoref): New macro.
+	(stroref): Likewise.
+	* libpoke/pkl-rt.pk (_pkl_aoref): New function.
+	(_pkl_aoref_complete): Likewise.
+	* testsuite/poke.pkl/arrays-index-4.pk: New test.
+	* testsuite/poke.pkl/arrays-index-5.pk: Likewise.
+	* testsuite/poke.pkl/arrays-index-6.pk: Likewise.
+	* testsuite/poke.pkl/arrays-index-7.pk: Likewise.
+	* testsuite/poke.pkl/arrays-index-8.pk: Likewise.
+	* testsuite/poke.pkl/arrays-index-9.pk: Likewise.
+	* testsuite/poke.pkl/arrays-index-10.pk: Likewise.
+	* testsuite/poke.pkl/arrays-index-11.pk: Likewise.
+	* testsuite/poke.pkl/arrays-index-12.pk: Likewise.
+	* testsuite/poke.pkl/arrays-index-13.pk: Likewise.
+	* testsuite/poke.pkl/arrays-index-14.pk: Likewise.
+	* testsuite/poke.pkl/strings-index-3.pk: Likewise.
+	* testsuite/poke.pkl/strings-index-4.pk: likewise.
+	* testsuite/poke.pkl/strings-index-5.pk: Likewise.
+	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.
+	* doc/poke.texi (Array Indexing): Document indexing by offset.
+	(String Indexing): Likewise.
+
 2022-10-30  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* libpoke/pkl-tab.y: Make unary operators take precedence over AS
