pvm: make the `aset' isntruction not-checked
2022-10-21  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm.jitter (aset): Do not check for ebounds nor sbounds.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2022-10-21  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pvm.jitter (aset): Do not check for ebounds nor sbounds.
+
+2022-10-21  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-gen.c (pkl_gen_pr_cast): In casts from any, make
 	sure that the target type has a bounder if it is an array type.
 	(pkl_gen_ps_isa): Likewise for `isa' operations.
