--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2022-10-23  Arsen Arsenović  <arsen@aarsen.me>
+
+        * doc/gen-pvm-insns.sh (SUBSECTIONS): Emit @pvindex calls for
+        insns.
+        * doc/poke.texi (PVM Instruction Index): New section.
+
 2022-10-23  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* testsuite/poke.pickles/ustar-test.pk: Likewise.
