--- a/AUTHORS
+++ b/AUTHORS
@@ -15,3 +15,4 @@ Mohammad-Reza Nabipoor	<mnabipoor@gnu.org>
 David Faust             <david.faust@oracle.com>
 Indu Bhagat             <indu.bhagat@oracle.com>
 Matt Ihlenfield         <mtihlenfield@protonmail.com>
+Arsen Arsenović		<arsen@aarsen.me>
