--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2022-10-23  Arsen Arsenović  <arsen@aarsen.me>
+
+        * AUTHORS: Add myself.
+        * etc/hacking.org (Write After Approval): Likewise.
+        * HACKING: Regenerate.
+
 2022-10-21  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* libpoke/pvm.jitter (aset): Do not check for ebounds nor sbounds.
