--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
         * doc/gen-pvm-insns.sh (SUBSECTIONS): Emit @pvindex calls for
         insns.
         * doc/poke.texi (PVM Instruction Index): New section.
+        (Indicies): New appendix.
+        (Concept Index): Move under Indicies and number using @appendixsec.
 
 2022-10-23  Jose E. Marchesi  <jemarch@gnu.org>
 
