pkl-rt.pk: _pkl_print_format_any: handle PVM types
2022-10-26  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-rt.pk (_pkl_print_format_any): Handle PVM types.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2022-10-26  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
+	* libpoke/pkl-rt.pk (_pkl_print_format_any): Handle PVM types.
+
+2022-10-26  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
 	* libpoke/pkl-gen-attrs.pks (attr_size): Add `typof' and `nip'
 	instructions around `tyis*` instructions.
 	(attr_eoffset): Likewise.
