--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2022-10-27  Arsen Arsenović  <arsen@aarsen.me>
+
+	* bootstrap.conf (libpoke_modules): Add set, xset and
+	linkedhash-set.
+	* libpoke/pkl-ast.c (pkl_ast_node_free): Allocate a visitation
+	set, and move most code...
+	(pkl_ast_node_free_1): ... to here, so that we can track and avoid
+	freed nodes.  Also, no longer consult IS_RECURSIVE for lifetime
+	information.
+	* testsuite/poke.pkl/recursion-bad-1.pk: New test.
+	* testsuite/poke.pkl/recursion-bad-2.pk: New test.
+	* testsuite/Makefile.am (EXTRA_DIST): Add the new tests.
+
 2022-10-27  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* etc/poke.rec (Fix %destructors in parser): Removed as DONE.
