--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2022-10-27  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* etc/hacking.org (How `any' is handed in the PVM): New section.
+	* HACKING: Regenerate.
+
+2022-10-27  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-trans.c: Do not include pvm-program.h.
 
 2022-10-27  Arsen Arsenović  <arsen@aarsen.me>
